# glitch-sandbox

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindGlitch.cmake
examples/hello_triangle/: hello_triangle.cpp  hello_triangle.h
examples/spinning_cube/: spinning_cube.cpp  spinning_cube.h
examples/textures/: textures.cpp  textures.h
shaders/: compile_shaders.sh
shaders/hello_triangle/: triangle.vert.spv
shaders/spinning_cube/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv
shaders/textures/: textured_rect.frag  textured_rect.frag.spv  textured_rect.vert  textured_rect.vert.spv
src/: camera_controller.cpp  camera_controller.h  example.h  game.cpp  game.h  main.cpp  pch.h  scene_data.h  shader_utils.cpp  shader_utils.h
src/examples/hello_triangle/: hello_triangle.h
src/examples/spinning_cube/: spinning_cube.cpp  spinning_cube.h
src/examples/textures/: textures.h
